Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -705,5 +705,6 @@
   "dn14:3.32.2": "„U ovome srećnom eonu, gospodo, Blaženi, plemeniti i potpuno probuđeni, se pojavio u ovome svetu.",
   "dn14:3.32.3": "Rođen je u porodici plemića,",
   "dn14:3.32.4": "u Gotama klanu.",
-  "dn14:3.32.5": "Njegov životni vek je kratak, poput trenutka, jer dugovečna osoba sada poživi tek sto godina."
+  "dn14:3.32.5": "Njegov životni vek je kratak, poput trenutka, jer dugovečna osoba sada poživi tek sto godina.",
+  "dn14:3.32.6": "Postao je probuđen u podnožju assattha drveta."
 }
