Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -706,5 +706,6 @@
   "dn14:3.32.3": "Rođen je u porodici plemića,",
   "dn14:3.32.4": "u Gotama klanu.",
   "dn14:3.32.5": "Njegov životni vek je kratak, poput trenutka, jer dugovečna osoba sada poživi tek sto godina.",
-  "dn14:3.32.6": "Postao je probuđen u podnožju assattha drveta."
+  "dn14:3.32.6": "Postao je probuđen u podnožju assattha drveta.",
+  "dn14:3.32.7": "Blaženi je imao imao je Sāriputtu i Mogggallānu kao dva svoja glavna učenika, bolje od svih drugih."
 }
