--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -711,5 +711,6 @@
   "dn14:3.32.8": "Blaženi ima jednu zajednicu učenika.",
   "dn14:3.32.9": "Njih 1.250 i svaki je uklonio sve nečistoće svoga uma.",
   "dn14:3.32.10": "Kao ličnog pratioca imao je monaha po imenu Ānanda.",
-  "dn14:3.32.11": "Njegov otac bio je kralj Suddhodana,"
+  "dn14:3.32.11": "Njegov otac bio je kralj Suddhodana,",
+  "dn14:3.32.12": "a majka kraljica Māya."
 }
