--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -714,5 +714,6 @@
   "dn14:3.32.11": "Njegov otac bio je kralj Suddhodana,",
   "dn14:3.32.12": "a majka kraljica Māya.",
   "dn14:3.32.13": "I on vlada iz svoje prestonici po imenu Kapilavatthu.",
-  "dn14:3.32.14": "Blaženi, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja."
+  "dn14:3.32.14": "Blaženi, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja.",
+  "dn14:3.32.15": "Vodeći svetački život predvođeni Blaženim, mi izgubismo želju za zadovoljstvima čula i preporodismo se na ovom mestu.”"
 }
