--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -716,5 +716,6 @@
   "dn14:3.32.13": "I on vlada iz svoje prestonici po imenu Kapilavatthu.",
   "dn14:3.32.14": "Blaženi, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja.",
   "dn14:3.32.15": "Vodeći svetački život predvođeni Blaženim, mi izgubismo želju za zadovoljstvima čula i preporodismo se na ovom mestu.”",
-  "dn14:3.33.1": "Monasi, zato što je potpuno pronikao u prirodu ovoga sveta, Tathāgata je u stanju da sve ovo zna o Budama iz prošlosti."
+  "dn14:3.33.1": "Monasi, zato što je potpuno pronikao u prirodu ovoga sveta, Tathāgata je u stanju da sve ovo zna o Budama iz prošlosti.",
+  "dn14:3.33.2": "’Ovakvo je bilo poreklo tog Bude, ovako se zvao, iz tog je klana bio, ovakvi su mu bili postupci, ovakvi kvaliteti, ovakva mudrost, ovakvo boravište, ovakvo oslobođenje’."
 }
