--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -719,5 +719,6 @@
   "dn14:3.33.1": "Monasi, zato što je potpuno pronikao u prirodu ovoga sveta, Tathāgata je u stanju da sve ovo zna o Budama iz prošlosti.",
   "dn14:3.33.2": "’Ovakvo je bilo poreklo tog Bude, ovako se zvao, iz tog je klana bio, ovakvi su mu bili postupci, ovakvi kvaliteti, ovakva mudrost, ovakvo boravište, ovakvo oslobođenje’.",
   "dn14:3.33.3": "Isto to su mu i božanstva ispričala.”",
-  "dn14:3.33.5": "Tako reče Blaženi."
+  "dn14:3.33.5": "Tako reče Blaženi.",
+  "dn14:3.33.6": "Zadovoljni, monasi se obradovaše rečima Blaženoga."
 }
