Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dn15:0.1": "Zbirka dugih govora 15",
   "dn15:0.2": "Govor o uzročnosti",
-  "dn15:1.0": "1. Uslovljeni nastanak"
+  "dn15:1.0": "1. Uslovljeni nastanak",
+  "dn15:1.1": "Ovako sam čuo."
 }
