Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dn15:0.1": "Zbirka dugih govora 15",
   "dn15:0.2": "Govor o uzročnosti",
   "dn15:1.0": "1. Uslovljeni nastanak",
-  "dn15:1.1": "Ovako sam čuo."
+  "dn15:1.1": "Ovako sam čuo.",
+  "dn15:1.2": "Jednom je Blaženi boravio među Kuruima, u blizini mesta po imenu Kammāsadhamma."
 }
