Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.97:0.1": "Verbundene Lehrreden 35.97 ",
-  "sn35.97:0.2": "10. Das Kapitel über die Sechser "
+  "sn35.97:0.2": "10. Das Kapitel über die Sechser ",
+  "sn35.97:0.3": "Wer nachlässig lebt "
 }
