--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.97:0.1": "Verbundene Lehrreden 35.97 ",
   "sn35.97:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.97:0.3": "Wer nachlässig lebt ",
-  "sn35.97:1.1": "„Mönche und Nonnen, ich will euch lehren, wer nachlässig lebt und wer beflissen lebt. "
+  "sn35.97:1.1": "„Mönche und Nonnen, ich will euch lehren, wer nachlässig lebt und wer beflissen lebt. ",
+  "sn35.97:1.2": "Hört zu … "
 }
