Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.97:0.3": "Wer nachlässig lebt ",
   "sn35.97:1.1": "„Mönche und Nonnen, ich will euch lehren, wer nachlässig lebt und wer beflissen lebt. ",
   "sn35.97:1.2": "Hört zu … ",
-  "sn35.97:1.3": "Und wie lebt jemand nachlässig? "
+  "sn35.97:1.3": "Und wie lebt jemand nachlässig? ",
+  "sn35.97:1.4": "Wenn man mit ungezügeltem Sehvermögen lebt, wird der Geist verschmutzt in Bezug auf Bilder, die das Auge erkennt. "
 }
