--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.97:1.2": "Hört zu … ",
   "sn35.97:1.3": "Und wie lebt jemand nachlässig? ",
   "sn35.97:1.4": "Wenn man mit ungezügeltem Sehvermögen lebt, wird der Geist verschmutzt in Bezug auf Bilder, die das Auge erkennt. ",
-  "sn35.97:1.5": "Wenn der Geist verschmutzt ist, gibt es keine Freude. "
+  "sn35.97:1.5": "Wenn der Geist verschmutzt ist, gibt es keine Freude. ",
+  "sn35.97:1.7": "Wenn es keine Ekstase gibt, gibt es keine Stille. "
 }
