--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.97:1.6": "Wenn es keine Freude gibt, gibt es keine Ekstase. ",
   "sn35.97:1.7": "Wenn es keine Ekstase gibt, gibt es keine Stille. ",
   "sn35.97:1.8": "Wenn es keine Stille gibt, gibt es Leiden. ",
-  "sn35.97:1.9": "Wenn man leidet, versenkt sich der Geist nicht im Samādhi. "
+  "sn35.97:1.9": "Wenn man leidet, versenkt sich der Geist nicht im Samādhi. ",
+  "sn35.97:1.10": "Wenn der Geist nicht im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten nicht klar. "
 }
