--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -319,7 +319,7 @@
   "dn33:1.11.77": "Wenn sie mit dem Ohr einen Ton hört … ",
   "dn33:1.11.78": "Wenn sie mit der Nase einen Duft riecht … ",
   "dn33:1.11.79": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
-  "dn33:1.11.80": "Wenn sie mit dem Körper eine Berührung spürt … ",
+  "dn33:1.11.80": "Wenn sie mit dem Körper eine Berührung empfindet … ",
   "dn33:1.11.81": "Wenn sie mit dem Geist einen Gedanken erkennt, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "dn33:1.11.82": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
   "dn33:1.11.83": "Das nennt man das Bemühen, zu zügeln. ",
