Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -633,7 +633,7 @@
   "dn33:2.2.26": "Wenn man mit dem Ohr einen Ton hört … ",
   "dn33:2.2.27": "Wenn man mit der Nase einen Duft riecht … ",
   "dn33:2.2.28": "Wenn man mit der Zunge einen Geschmack schmeckt … ",
-  "dn33:2.2.29": "Wenn man mit dem Körper eine Berührung spürt … ",
+  "dn33:2.2.29": "Wenn man mit dem Körper eine Berührung empfindet … ",
   "dn33:2.2.30": "Wenn man mit dem Geist einen Gedanken erkennt, kreisen die Gedanken um einen Gedanken, der eine Grundlage für Fröhlichkeit darstellt. ",
   "dn33:2.2.31": "Sechs Arten, wie die Gedanken um Traurigkeit kreisen: ",
   "dn33:2.2.32": "Wenn man mit dem Auge ein Bild sieht, kreisen die Gedanken um ein Bild, das eine Grundlage für Traurigkeit darstellt. … ",
