--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -722,7 +722,7 @@
   "dn33:2.2.115": "die Besinnung auf den Buddha, auf die Lehre, auf den Saṅgha, auf sittliches Verhalten, auf Großzügigkeit und auf die Gottheiten. ",
   "dn33:2.2.116": "Sechs gleichbleibende Reaktionen: ",
   "dn33:2.2.117": "Wenn ein Mönch mit dem Auge ein Bild sieht, ist er weder froh noch traurig. Er bleibt gleichmütig, achtsam und umsichtig. ",
-  "dn33:2.2.118": "Wenn er mit dem Ohr einen Ton hört … Wenn er mit der Nase einen Duft riecht … Wenn er mit der Zunge einen Geschmack schmeckt … Wenn er mit dem Körper eine Berührung spürt … ",
+  "dn33:2.2.118": "Wenn er mit dem Ohr einen Ton hört … Wenn er mit der Nase einen Duft riecht … Wenn er mit der Zunge einen Geschmack schmeckt … Wenn er mit dem Körper eine Berührung empfindet … ",
   "dn33:2.2.119": "Wenn er mit dem Geist einen Gedanken erkennt, ist er weder froh noch traurig. Er bleibt gleichmütig, achtsam und umsichtig. ",
   "dn33:2.2.120": "Sechs Wiedergeburtsklassen: ",
   "dn33:2.2.121": "Jemand, der in eine dunkle Klasse hineingeboren wurde, bewirkt ein dunkles Ergebnis. ",
