--- a/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "an11.17:6.4": "Wenn sie mit dem Ohr einen Ton hört … ",
   "an11.17:6.5": "Wenn sie mit der Nase einen Duft riecht … ",
   "an11.17:6.6": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
-  "an11.17:6.7": "Wenn sie mit dem Körper eine Berührung spürt … ",
+  "an11.17:6.7": "Wenn sie mit dem Körper eine Berührung empfindet … ",
   "an11.17:6.8": "Wenn sie mit dem Geist einen Gedanken erkennt, bleibt sie an den Merkmalen und Einzelheiten hängen. ",
   "an11.17:6.9": "Da das Denkvermögen nicht gezügelt ist, nehmen schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhand. Sie übt keine Zügelung, bewacht das Denkvermögen nicht und hält es nicht im Zaum. ",
   "an11.17:6.10": "So verbindet eine Nonne Wunden nicht. ",
