Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
@@ -29,7 +29,7 @@
   "mn33:7.4": "Wenn sie mit dem Ohr einen Ton hört … ",
   "mn33:7.5": "Wenn sie mit der Nase einen Duft riecht … ",
   "mn33:7.6": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
-  "mn33:7.7": "Wenn sie mit dem Körper eine Berührung spürt … ",
+  "mn33:7.7": "Wenn sie mit dem Körper eine Berührung empfindet … ",
   "mn33:7.8": "Wenn sie mit dem Geist einen Gedanken erkennt, bleibt sie an den Merkmalen und Einzelheiten hängen. ",
   "mn33:7.9": "Da das Denkvermögen nicht gezügelt ist, nehmen schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhand. Sie übt keine Zügelung, bewacht das Denkvermögen nicht und hält es nicht im Zaum. ",
   "mn33:7.10": "So verbindet eine Nonne Wunden nicht. ",
