--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -291,7 +291,7 @@
   "dn34:1.7.73": "Wenn er mit dem Ohr einen Ton hört … ",
   "dn34:1.7.74": "Wenn er mit der Nase einen Duft riecht … ",
   "dn34:1.7.75": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
-  "dn34:1.7.76": "Wenn er mit dem Körper eine Berührung spürt … ",
+  "dn34:1.7.76": "Wenn er mit dem Körper eine Berührung empfindet … ",
   "dn34:1.7.77": "Wenn er mit dem Geist einen Gedanken erkennt, ist er weder froh noch traurig. Er bleibt gleichmütig, achtsam und umsichtig. ",
   "dn34:1.7.79": "Welche sechs Dinge müssen unmittelbar erkannt werden? ",
   "dn34:1.7.80": "Sechs unübertreffliche Dinge: ",
