Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -702,7 +702,7 @@
   "dn34:2.3.72": "Wenn sie mit dem Ohr einen Ton hört … ",
   "dn34:2.3.73": "Wenn sie mit der Nase einen Duft riecht … ",
   "dn34:2.3.74": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
-  "dn34:2.3.75": "Wenn sie mit dem Körper eine Berührung spürt … ",
+  "dn34:2.3.75": "Wenn sie mit dem Körper eine Berührung empfindet … ",
   "dn34:2.3.76": "Wenn sie mit dem Geist einen Gedanken erkennt, ist sie weder froh noch traurig. Sie bleibt gleichmütig, achtsam und umsichtig. ",
   "dn34:2.3.77": "So besitzt eine Nonne sechs Faktoren. ",
   "dn34:2.3.78": "Und wie hat ein Mönch einen einzigen Wächter? ",
