--- a/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "thag16.5:8.4": "wird der Geist geschädigt. ",
   "thag16.5:8.5": "Wenn man so Leiden anhäuft, ",
   "thag16.5:8.6": "heißt es, man sei vom Erlöschen weit entfernt. ",
-  "thag16.5:9.1": "Wenn man eine Berührung spürt, ist die Achtsamkeit verloren, ",
+  "thag16.5:9.1": "Wenn man eine Berührung empfindet, ist die Achtsamkeit verloren, ",
   "thag16.5:9.2": "da die Aufmerksamkeit sich an ein anziehendes Merkmal heftet. ",
   "thag16.5:9.3": "Man erfährt es mit begehrlichem Geist ",
   "thag16.5:9.4": "und hält weiter daran fest. ",
