--- a/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
@@ -103,7 +103,7 @@
   "thag16.5:20.4": "So lebt man achtsam. ",
   "thag16.5:20.5": "Wenn man so Leiden abträgt, ",
   "thag16.5:20.6": "heißt es, man sei dem Erlöschen nahegekommen. ",
-  "thag16.5:21.1": "Wenn man eine Berührung mit Achtsamkeit spürt, ",
+  "thag16.5:21.1": "Wenn man eine Berührung mit Achtsamkeit empfindet, ",
   "thag16.5:21.2": "gibt es kein Begehren von Berührungen. ",
   "thag16.5:21.3": "Man erfährt sie mit von Begehren freiem Geist ",
   "thag16.5:21.4": "und hält nicht weiter daran fest. ",
