--- a/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag16.5_translation-de-sabbamitta.json
@@ -107,7 +107,7 @@
   "thag16.5:21.2": "gibt es kein Begehren von Berührungen. ",
   "thag16.5:21.3": "Man erfährt sie mit von Begehren freiem Geist ",
   "thag16.5:21.4": "und hält nicht weiter daran fest. ",
-  "thag16.5:22.1": "Selbst wenn man eine Berührung spürt ",
+  "thag16.5:22.1": "Selbst wenn man eine Berührung empfindet ",
   "thag16.5:22.2": "und mit dem Gefühl, das er auslöst, vertraut wird, ",
   "thag16.5:22.3": "trägt man ab und häuft nicht an: ",
   "thag16.5:22.4": "So lebt man achtsam. ",
