--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
@@ -126,7 +126,7 @@
   "sn35.95:31.4": "So lebt man achtsam. ",
   "sn35.95:31.5": "Wenn man so Leiden abträgt, ",
   "sn35.95:31.6": "heißt es, man sei dem Erlöschen nahegekommen. ",
-  "sn35.95:32.1": "Wenn man eine Berührung mit Achtsamkeit spürt, ",
+  "sn35.95:32.1": "Wenn man eine Berührung mit Achtsamkeit empfindet, ",
   "sn35.95:32.2": "gibt es kein Begehren von Berührungen. ",
   "sn35.95:32.3": "Man erfährt sie mit von Begehren freiem Geist ",
   "sn35.95:32.4": "und hält nicht weiter daran fest. ",
