--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
@@ -130,7 +130,7 @@
   "sn35.95:32.2": "gibt es kein Begehren von Berührungen. ",
   "sn35.95:32.3": "Man erfährt sie mit von Begehren freiem Geist ",
   "sn35.95:32.4": "und hält nicht weiter daran fest. ",
-  "sn35.95:33.1": "Selbst wenn man eine Berührung spürt ",
+  "sn35.95:33.1": "Selbst wenn man eine Berührung empfindet ",
   "sn35.95:33.2": "und mit dem Gefühl, das sie auslöst, vertraut wird, ",
   "sn35.95:33.3": "trägt man ab und häuft nicht an: ",
   "sn35.95:33.4": "So lebt man achtsam. ",
