--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.8_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "ud3.8:2.1": "„Werte Freunde, wenn ein Mönch, der nur Almosen isst, um Almosen umherzieht, bekommt er von Zeit zu Zeit angenehme Bilder zu sehen, angenehme Töne zu hören, angenehme Düfte zu riechen, angenehme Geschmäcke zu schmecken und angenehme Berührungen zu empfinden. ",
   "ud3.8:2.2": "Er zieht um Almosen umher und wird geehrt, geachtet, gewürdigt, verehrt und wertgeschätzt. ",
   "ud3.8:2.3": "Kommt, auch wir sollten nur Almosen essen. ",
-  "ud3.8:2.4": "Dann werden wir von Zeit zu Zeit angenehme Bilder zu sehen, angenehme Töne zu hören, angenehme Düfte zu riechen, angenehme Geschmäcke zu schmecken und angenehme Berührungen zu spüren bekommen. ",
+  "ud3.8:2.4": "Dann werden wir von Zeit zu Zeit angenehme Bilder zu sehen, angenehme Töne zu hören, angenehme Düfte zu riechen, angenehme Geschmäcke zu schmecken und angenehme Berührungen zu empfinden bekommen. ",
   "ud3.8:2.5": "Auch wir werden um Almosen umherziehen und geehrt, geachtet, gewürdigt, verehrt und wertgeschätzt werden.“ ",
   "ud3.8:2.6": "Doch an dieser Stelle wurde die Unterhaltung zwischen diesen Mönchen und Nonnen unterbrochen. ",
   "ud3.8:3.1": "Der Buddha kam am späten Nachmittag aus seiner Klausur und ging zum Pavillon beim Karibaum. Er setzte sich auf den ausgebreiteten Sitz ",
