--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.70_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn35.70:2.2": "Es gibt in ihm Verlangen nach Bildern, und er versteht das. ",
   "sn35.70:2.3": "Da das so ist, ",
   "sn35.70:2.5": "ist so die Lehre in diesem Leben sichtbar, unmittelbar wirksam, sie lädt zum Überprüfen ein, ist wert, beherzigt zu werden, sodass vernünftige Menschen sie selbst erkennen können. ",
-  "sn35.70:3.1": "Dann hört da ein Mönch … riecht … schmeckt … spürt … ",
+  "sn35.70:3.1": "Dann hört da ein Mönch … riecht … schmeckt … empfindet … ",
   "sn35.70:4.1": "Dann erkennt da ein Mönch mit dem Geist einen Gedanken. Er erfährt sowohl den Gedanken als auch das Verlangen nach dem Gedanken. ",
   "sn35.70:4.2": "Es gibt in ihm Verlangen nach Gedanken, und er versteht das. ",
   "sn35.70:4.3": "Da das so ist, ",
