--- a/translation/de/sabbamitta/sutta/an/an5/an5.139_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.139_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "an5.139:12.2": "Da schmeckt ein Mönch mit der Zunge einen Geschmack und ist von einem begehrenswerten Geschmack berauscht, sodass er nicht in der Lage ist, den Geist zu beruhigen. ",
   "an5.139:12.3": "So kann ein Mönch Geschmäcke nicht ertragen. ",
   "an5.139:13.1": "Und wie kann ein Mönch Berührungen nicht ertragen? ",
-  "an5.139:13.2": "Da spürt ein Mönch mit dem Körper eine Berührung und ist von einer begehrenswerten Berührung berauscht, sodass er nicht in der Lage ist, den Geist zu beruhigen. ",
+  "an5.139:13.2": "Da empfindet ein Mönch mit dem Körper eine Berührung und ist von einer begehrenswerten Berührung berauscht, sodass er nicht in der Lage ist, den Geist zu beruhigen. ",
   "an5.139:13.3": "So kann ein Mönch Berührungen nicht ertragen. ",
   "an5.139:14.1": "Ein Mönch, der diese fünf Eigenschaften besitzt, ist einer den Göttern gewidmeten Gabe nicht würdig, der Gastfreundschaft nicht würdig, einer religiösen Gabe nicht würdig, des Grußes mit zusammengelegten Händen nicht würdig und ist nicht das unübertreffliche Feld für Verdienst für die Welt. ",
   "an5.139:15.1": "Ein königlicher Elefantenbulle, der fünf Faktoren besitzt, ist eines Königs würdig, kann einem König dienen und gilt als Zeichen der Königswürde. ",
