--- a/translation/de/sabbamitta/sutta/an/an5/an5.139_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.139_translation-de-sabbamitta.json
@@ -75,7 +75,7 @@
   "an5.139:26.2": "Da schmeckt ein Mönch mit der Zunge einen Geschmack und ist von einem begehrenswerten Geschmack nicht berauscht, sodass er in der Lage ist, den Geist zu beruhigen. ",
   "an5.139:26.3": "So ein Mönch Geschmäcke ertragen. ",
   "an5.139:27.1": "Und wie kann ein Mönch Berührungen ertragen? ",
-  "an5.139:27.2": "Da spürt ein Mönch mit dem Körper eine Berührung und ist von einer begehrenswerten Berührung nicht berauscht, sodass er in der Lage ist, den Geist zu beruhigen. ",
+  "an5.139:27.2": "Da empfindet ein Mönch mit dem Körper eine Berührung und ist von einer begehrenswerten Berührung nicht berauscht, sodass er in der Lage ist, den Geist zu beruhigen. ",
   "an5.139:27.3": "So kann ein Mönch Berührungen ertragen. ",
   "an5.139:28.1": "Ein Mönch, der diese fünf Eigenschaften besitzt, ist einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und ist das unübertreffliche Feld für Verdienst für die Welt.“ "
 }
