--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.97:1.9": "Wenn man leidet, versenkt sich der Geist nicht im Samādhi. ",
   "sn35.97:1.10": "Wenn der Geist nicht im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten nicht klar. ",
   "sn35.97:1.11": "Wenn die natürlichen Gesetzmäßigkeiten nicht klar geworden sind, gilt man als jemand, der nachlässig lebt. ",
-  "sn35.97:1.12": "Wenn man mit ungezügeltem Hörvermögen lebt … Wenn man mit ungezügeltem Riechvermögen lebt … Wenn man mit ungezügeltem Schmeckvermögen lebt … Wenn man mit ungezügeltem Empfindungsvermögen lebt … "
+  "sn35.97:1.12": "Wenn man mit ungezügeltem Hörvermögen lebt … Wenn man mit ungezügeltem Riechvermögen lebt … Wenn man mit ungezügeltem Schmeckvermögen lebt … Wenn man mit ungezügeltem Empfindungsvermögen lebt … ",
+  "sn35.97:1.15": "Wenn man mit ungezügeltem Denkvermögen lebt, wird der Geist verschmutzt in Bezug auf Gedanken, die der Geist erkennt. "
 }
