--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.97:1.11": "Wenn die natürlichen Gesetzmäßigkeiten nicht klar geworden sind, gilt man als jemand, der nachlässig lebt. ",
   "sn35.97:1.12": "Wenn man mit ungezügeltem Hörvermögen lebt … Wenn man mit ungezügeltem Riechvermögen lebt … Wenn man mit ungezügeltem Schmeckvermögen lebt … Wenn man mit ungezügeltem Empfindungsvermögen lebt … ",
   "sn35.97:1.15": "Wenn man mit ungezügeltem Denkvermögen lebt, wird der Geist verschmutzt in Bezug auf Gedanken, die der Geist erkennt. ",
-  "sn35.97:1.16": "Wenn der Geist verschmutzt ist, gibt es keine Freude. "
+  "sn35.97:1.16": "Wenn der Geist verschmutzt ist, gibt es keine Freude. ",
+  "sn35.97:1.17": "Wenn es keine Freude gibt, gibt es keine Ekstase. "
 }
