Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.97:1.15": "Wenn man mit ungezügeltem Denkvermögen lebt, wird der Geist verschmutzt in Bezug auf Gedanken, die der Geist erkennt. ",
   "sn35.97:1.16": "Wenn der Geist verschmutzt ist, gibt es keine Freude. ",
   "sn35.97:1.17": "Wenn es keine Freude gibt, gibt es keine Ekstase. ",
-  "sn35.97:1.18": "Wenn es keine Ekstase gibt, gibt es keine Stille. "
+  "sn35.97:1.18": "Wenn es keine Ekstase gibt, gibt es keine Stille. ",
+  "sn35.97:1.19": "Wenn es keine Stille gibt, gibt es Leiden. "
 }
