Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.97:1.16": "Wenn der Geist verschmutzt ist, gibt es keine Freude. ",
   "sn35.97:1.17": "Wenn es keine Freude gibt, gibt es keine Ekstase. ",
   "sn35.97:1.18": "Wenn es keine Ekstase gibt, gibt es keine Stille. ",
-  "sn35.97:1.19": "Wenn es keine Stille gibt, gibt es Leiden. "
+  "sn35.97:1.19": "Wenn es keine Stille gibt, gibt es Leiden. ",
+  "sn35.97:1.20": "Wenn man leidet, versenkt sich der Geist nicht im Samādhi. "
 }
