Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.97:1.20": "Wenn man leidet, versenkt sich der Geist nicht im Samādhi. ",
   "sn35.97:1.21": "Wenn der Geist nicht im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten nicht klar. ",
   "sn35.97:1.22": "Wenn die natürlichen Gesetzmäßigkeiten nicht klar geworden sind, gilt man als jemand, der nachlässig lebt. ",
-  "sn35.97:1.23": "So lebt jemand nachlässig. "
+  "sn35.97:1.23": "So lebt jemand nachlässig. ",
+  "sn35.97:2.1": "Und wie lebt jemand beflissen? "
 }
