--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.97:1.23": "So lebt jemand nachlässig. ",
   "sn35.97:2.1": "Und wie lebt jemand beflissen? ",
   "sn35.97:2.2": "Wenn man mit gezügeltem Sehvermögen lebt, wird der Geist nicht verschmutzt in Bezug auf Bilder, die das Auge erkennt. ",
-  "sn35.97:2.3": "Wenn der Geist nicht verschmutzt ist, lodert Freude auf. "
+  "sn35.97:2.3": "Wenn der Geist nicht verschmutzt ist, lodert Freude auf. ",
+  "sn35.97:2.4": "Wenn man voller Freude ist, lodert Ekstase auf. "
 }
