--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn35.97:2.3": "Wenn der Geist nicht verschmutzt ist, lodert Freude auf. ",
   "sn35.97:2.4": "Wenn man voller Freude ist, lodert Ekstase auf. ",
   "sn35.97:2.5": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
-  "sn35.97:2.6": "Wenn der Körper still ist, empfindet man Seligkeit. "
+  "sn35.97:2.6": "Wenn der Körper still ist, empfindet man Seligkeit. ",
+  "sn35.97:2.7": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. "
 }
