--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn35.97:2.5": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
   "sn35.97:2.6": "Wenn der Körper still ist, empfindet man Seligkeit. ",
   "sn35.97:2.7": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
-  "sn35.97:2.8": "Wenn der Geist im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten klar. "
+  "sn35.97:2.8": "Wenn der Geist im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten klar. ",
+  "sn35.97:2.9": "Wenn die natürlichen Gesetzmäßigkeiten klar geworden sind, gilt man als jemand, der beflissen lebt. "
 }
