Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn35.97:2.6": "Wenn der Körper still ist, empfindet man Seligkeit. ",
   "sn35.97:2.7": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
   "sn35.97:2.8": "Wenn der Geist im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten klar. ",
-  "sn35.97:2.9": "Wenn die natürlichen Gesetzmäßigkeiten klar geworden sind, gilt man als jemand, der beflissen lebt. "
+  "sn35.97:2.9": "Wenn die natürlichen Gesetzmäßigkeiten klar geworden sind, gilt man als jemand, der beflissen lebt. ",
+  "sn35.97:2.10": "Wenn man mit gezügeltem Hörvermögen lebt … Wenn man mit gezügeltem Riechvermögen lebt … Wenn man mit gezügeltem Schmeckvermögen lebt … Wenn man mit gezügeltem Empfindungsvermögen lebt … "
 }
