--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.97:2.10": "Wenn man mit gezügeltem Hörvermögen lebt … Wenn man mit gezügeltem Riechvermögen lebt … Wenn man mit gezügeltem Schmeckvermögen lebt … Wenn man mit gezügeltem Empfindungsvermögen lebt … ",
   "sn35.97:2.12": "Wenn man mit gezügeltem Denkvermögen lebt, wird der Geist nicht verschmutzt in Bezug auf Gedanken, die der Geist erkennt. ",
   "sn35.97:2.13": "Wenn der Geist nicht verschmutzt ist, lodert Freude auf. ",
-  "sn35.97:2.14": "Wenn man voller Freude ist, lodert Ekstase auf. "
+  "sn35.97:2.14": "Wenn man voller Freude ist, lodert Ekstase auf. ",
+  "sn35.97:2.15": "Wenn der Geist in Ekstase ist, wird der Körper still. "
 }
