--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn35.97:2.12": "Wenn man mit gezügeltem Denkvermögen lebt, wird der Geist nicht verschmutzt in Bezug auf Gedanken, die der Geist erkennt. ",
   "sn35.97:2.13": "Wenn der Geist nicht verschmutzt ist, lodert Freude auf. ",
   "sn35.97:2.14": "Wenn man voller Freude ist, lodert Ekstase auf. ",
-  "sn35.97:2.15": "Wenn der Geist in Ekstase ist, wird der Körper still. "
+  "sn35.97:2.15": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
+  "sn35.97:2.16": "Wenn der Körper still ist, empfindet man Seligkeit. "
 }
