--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.97_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn35.97:2.14": "Wenn man voller Freude ist, lodert Ekstase auf. ",
   "sn35.97:2.15": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
   "sn35.97:2.16": "Wenn der Körper still ist, empfindet man Seligkeit. ",
-  "sn35.97:2.17": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. "
+  "sn35.97:2.17": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
+  "sn35.97:2.18": "Wenn der Geist im Samādhi versunken ist, werden die natürlichen Gesetzmäßigkeiten klar. "
 }
