Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.98:0.1": "Verbundene Lehrreden 35.98 "
+  "sn35.98:0.1": "Verbundene Lehrreden 35.98 ",
+  "sn35.98:0.2": "10. Das Kapitel über die Sechser "
 }
