--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -971,6 +971,7 @@
   "sn-name:1077.sn35.95": "Mit Māluṅkyaputta ",
   "sn-name:1078.sn35.96": "Wer verkümmern muss ",
   "sn-name:1079.sn35.97": "Wer nachlässig lebt ",
+  "sn-name:1080.sn35.98": "Zügelung ",
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
