Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.98:0.1": "Verbundene Lehrreden 35.98 ",
   "sn35.98:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.98:0.3": "Zügelung ",
-  "sn35.98:1.1": "„Mönche und Nonnen, ich will euch lehren, wer gezügelt und wer ungezügelt ist. "
+  "sn35.98:1.1": "„Mönche und Nonnen, ich will euch lehren, wer gezügelt und wer ungezügelt ist. ",
+  "sn35.98:1.2": "Hört zu … "
 }
