--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.98:0.3": "Zügelung ",
   "sn35.98:1.1": "„Mönche und Nonnen, ich will euch lehren, wer gezügelt und wer ungezügelt ist. ",
   "sn35.98:1.2": "Hört zu … ",
-  "sn35.98:1.3": "Und wie ist jemand ungezügelt? "
+  "sn35.98:1.3": "Und wie ist jemand ungezügelt? ",
+  "sn35.98:1.4": "es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
