--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.98:1.2": "Hört zu … ",
   "sn35.98:1.3": "Und wie ist jemand ungezügelt? ",
   "sn35.98:1.4": "es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.98:1.5": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, sollte er verstehen: "
+  "sn35.98:1.5": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, sollte er verstehen: ",
+  "sn35.98:1.6": "‚Meine tauglichen Eigenschaften verkümmern. "
 }
