--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.98:1.5": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, sollte er verstehen: ",
   "sn35.98:1.6": "‚Meine tauglichen Eigenschaften verkümmern. ",
   "sn35.98:1.7": "Denn das ist es, was der Buddha Niedergang nennt.‘ ",
-  "sn35.98:1.8": "Es gibt Töne … Düfte … Geschmäcke … Berührungen … "
+  "sn35.98:1.8": "Es gibt Töne … Düfte … Geschmäcke … Berührungen … ",
+  "sn35.98:1.9": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
