--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.98:1.7": "Denn das ist es, was der Buddha Niedergang nennt.‘ ",
   "sn35.98:1.8": "Es gibt Töne … Düfte … Geschmäcke … Berührungen … ",
   "sn35.98:1.9": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.98:1.10": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, sollte sie verstehen: "
+  "sn35.98:1.10": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, sollte sie verstehen: ",
+  "sn35.98:1.11": "‚Meine tauglichen Eigenschaften verkümmern. "
 }
