--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.98:1.11": "‚Meine tauglichen Eigenschaften verkümmern. ",
   "sn35.98:1.12": "Denn das ist es, was der Buddha Niedergang nennt.‘ ",
   "sn35.98:1.13": "So ist jemand ungezügelt. ",
-  "sn35.98:2.1": "Und wie ist jemand gezügelt? "
+  "sn35.98:2.1": "Und wie ist jemand gezügelt? ",
+  "sn35.98:2.2": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
