Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.98:1.13": "So ist jemand ungezügelt. ",
   "sn35.98:2.1": "Und wie ist jemand gezügelt? ",
   "sn35.98:2.2": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.98:2.3": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, sollte er verstehen: "
+  "sn35.98:2.3": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, sollte er verstehen: ",
+  "sn35.98:2.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. "
 }
