Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -972,6 +972,7 @@
   "sn-name:1078.sn35.96": "Wer verkümmern muss ",
   "sn-name:1079.sn35.97": "Wer nachlässig lebt ",
   "sn-name:1080.sn35.98": "Zügelung ",
+  "sn-name:1081.sn35.99": "Versenkung ",
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
