Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.99:0.1": "Verbundene Lehrreden 35.99 ",
   "sn35.99:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.99:0.3": "Versenkung ",
-  "sn35.99:1.1": "„Mönche und Nonnen, entwickelt Versenkung. "
+  "sn35.99:1.1": "„Mönche und Nonnen, entwickelt Versenkung. ",
+  "sn35.99:1.2": "Ein Mönch, der Versenkung besitzt, versteht wahrhaftig. "
 }
