Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -810,7 +810,7 @@
   "sn-blurbs:sn35.97": "Wenn Mönche oder Nonnen sich nicht bezüglich der Sinne zügeln, sind sie nachlässig. Wenn sie sich zügeln, sind sie beflissen. ",
   "sn-blurbs:sn35.98": "Fehlende Zügelung heißt, Vergnügen an den Sinnen zu finden, Zügelung heißt, kein Vergnügen an ihnen zu finden. ",
   "sn-blurbs:sn35.99": "Entwickelt meditative Versenkung, sodass ihr den Vorgang der Sinneserfahrung wahrhaftig versteht. ",
-  "sn-blurbs:sn35.100": "Entwickelt Abgeschiedenheit, sodass ihr den Vorgang der Sinneserfahrung wahrhaftig versteht. ",
+  "sn-blurbs:sn35.100": "Pflegt die Abgeschiedenheit, sodass ihr den Vorgang der Sinneserfahrung wahrhaftig versteht. ",
   "sn-blurbs:sn35.101": "Lasst los, was nicht euer ist: der Vorgang der Sinneserfahrung. Wenn jemand Gras und Zweige vom Gelände des Klosters wegnähme, würden wir uns nicht aufregen, warum sollten wir uns über die Aggregate Sorgen machen? ",
   "sn-blurbs:sn35.102": "Lasst los, was nicht euer ist: der Vorgang der Sinneserfahrung. ",
   "sn-blurbs:sn35.113": "Während er in Klausur ist, führt der Buddha zu sich selbst aus, wie das Entstehen und Enden der Welt anhand der Sinneserfahrungen erklärt werden, die zu Verlangen und Leiden führen. Ein Mönch hört ihn und der Buddha fordert ihn auf, sich diese Lehre zu merken. ",
