Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -974,6 +974,7 @@
   "sn-name:1080.sn35.98": "Zügelung ",
   "sn-name:1081.sn35.99": "Versenkung ",
   "sn-name:1082.sn35.100": "Klausur ",
+  "sn-name:1083.sn35.101": "Nicht euer (1) ",
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
