Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.101:0.1": "Verbundene Lehrreden 35.101 ",
   "sn35.101:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.101:0.3": "Nicht euer (1) ",
-  "sn35.101:1.1": "„Mönche und Nonnen, gebt auf, was nicht euer ist. "
+  "sn35.101:1.1": "„Mönche und Nonnen, gebt auf, was nicht euer ist. ",
+  "sn35.101:1.2": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
