Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -10,5 +10,5 @@
   "sn35.101:1.7": "Bilder sind nicht euer: Gebt sie auf. ",
   "sn35.101:1.9": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:1.10": "Augenbewusstsein ist nicht euer: Gebt es auf. ",
-  "sn35.101:1.12": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. "
+  "sn35.101:1.12": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
