Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.101:3.3": "Ihn aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:3.4": "Gedanken sind nicht euer: Gebt sie auf. ",
   "sn35.101:3.6": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.101:3.7": "Geistbewusstsein ist nicht euer: Gebt es auf. "
+  "sn35.101:3.7": "Geistbewusstsein ist nicht euer: Gebt es auf. ",
+  "sn35.101:3.9": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
