Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.101:3.6": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:3.7": "Geistbewusstsein ist nicht euer: Gebt es auf. ",
   "sn35.101:3.9": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.101:3.10": "Geistberührung ist nicht euer: Gebt sie auf. "
+  "sn35.101:3.10": "Geistberührung ist nicht euer: Gebt sie auf. ",
+  "sn35.101:3.12": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
