Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.102:0.1": "Verbundene Lehrreden 35.102 ",
-  "sn35.102:0.2": "10. Das Kapitel über die Sechser "
+  "sn35.102:0.2": "10. Das Kapitel über die Sechser ",
+  "sn35.102:0.3": "Nicht euer (2) "
 }
