Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -146,7 +146,7 @@
   "dn29:16.13": "‚Während man sieht, sieht man nicht.‘ ",
   "dn29:16.14": "Doch dieser Spruch Uddakas ist nieder, derb, gewöhnlich, unedel und zwecklos, da er nur ein Rasiermesser betrifft. ",
   "dn29:16.15": "Wenn es etwas gibt, von dem man zu Recht sagen kann: ",
-  "dn29:16.16": "‚Man sieht und sieht auch nicht‘, sollte es von Folgendem gesagt werden. ",
+  "dn29:16.16": "‚Während man sieht, sieht man nicht‘, sollte es von Folgendem gesagt werden: ",
   "dn29:16.18": "Was sieht man, während man nicht sieht? ",
   "dn29:16.19": "Man sieht: einen spirituellen Pfad, der mit allen guten Eigenschaften versehen ist, in allen guten Eigenschaften vollständig, nicht zu viel und nicht zu wenig, gut erklärt, ganz, vollständig und gut vorgelegt. ",
   "dn29:16.20": "Man sieht nicht: etwas, das ihn noch reiner machen könnte, wenn man es wegnähme. ",
