Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.103:0.1": "Verbundene Lehrreden 35.103 ",
   "sn35.103:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.103:0.3": "Über Uddaka ",
-  "sn35.103:1.1": "„Mönche und Nonnen, Uddaka, der Sohn Rāmas, pflegte zu sagen: "
+  "sn35.103:1.1": "„Mönche und Nonnen, Uddaka, der Sohn Rāmas, pflegte zu sagen: ",
+  "sn35.103:1.2": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Das ist sicher der von Grund auf ausgemerzte Eiterherd, der nie zuvor ausgemerzt war!‘ "
 }
