Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.103:1.3": "Obwohl Uddaka, der Sohn Rāmas, kein Meister des Wissens war, sagte er: ‚Ich bin ein Meister des Wissens.‘ Obwohl er kein Bezwinger von allem war, sagte er: ‚Ich bin ein Bezwinger von allem.‘ Und obwohl der Eiterherd nicht von Grund auf ausgemerzt war, sagte er: ‚Ich habe den Eiterherd von Grund auf ausgemerzt.‘ ",
   "sn35.103:1.4": "So würde ein Mönch oder eine Nonne zu Recht sagen: ",
   "sn35.103:1.5": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Das ist sicher der von Grund auf ausgemerzte Eiterherd, der nie zuvor ausgemerzt war!‘ ",
-  "sn35.103:2.1": "Und wie ist jemand ein Meister des Wissens? "
+  "sn35.103:2.1": "Und wie ist jemand ein Meister des Wissens? ",
+  "sn35.103:2.2": "Da versteht ein Mönch bei den sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und die nachteiligen Folgen und das Entrinnen. "
 }
