Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.103:1.5": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Das ist sicher der von Grund auf ausgemerzte Eiterherd, der nie zuvor ausgemerzt war!‘ ",
   "sn35.103:2.1": "Und wie ist jemand ein Meister des Wissens? ",
   "sn35.103:2.2": "Da versteht ein Mönch bei den sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und die nachteiligen Folgen und das Entrinnen. ",
-  "sn35.103:2.3": "So ist ein Mönch ein Meister des Wissens. "
+  "sn35.103:2.3": "So ist ein Mönch ein Meister des Wissens. ",
+  "sn35.103:3.1": "Und wie ist eine Nonne eine Bezwingerin von allem? "
 }
